--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,8 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline'; img-src 'self';">
   <title>{% block title %}Charter Pool{% endblock %}</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}?v={{ cache_bust }}">
   <link rel="icon" type="image/png" href="{{ url_for('static', filename='pcc_logo.png') }}">
@@ -61,8 +59,8 @@
 
     <footer>
       <div class="footer-blurb">
-        Created by <a href="https://conjfrnk.com" target="_blank">Connor Frank</a>, the Charter House Manager
-        -- <a href="https://github.com/conjfrnk/charter-pool" target="_blank">GitHub</a> ({{ version }})
+        Created by <a href="https://conjfrnk.com" target="_blank" rel="noopener noreferrer">Connor Frank</a>, the Charter House Manager
+        -- <a href="https://github.com/conjfrnk/charter-pool" target="_blank" rel="noopener noreferrer">GitHub</a> ({{ version }})
       </div>
     </footer>
   </div>
