--- a/templates/profile_setup.html
+++ b/templates/profile_setup.html
@@ -7,6 +7,7 @@
     <p class="subtitle">Please complete your profile</p>
     
     <form method="POST" action="{{ url_for('profile_setup') }}">
+      {{ csrf_token() }}
       <input type="hidden" name="netid" value="{{ netid }}">
       
       <div class="form-group">
