--- a/templates/index.html
+++ b/templates/index.html
@@ -116,7 +116,7 @@
             <span class="game-time">{{ game.timestamp.strftime('%m/%d %I:%M%p') }}</span>
             {% if can_delete %}
               <form method="POST" action="{{ url_for('delete_game', game_id=game.id) }}" class="delete-form-inline" onsubmit="return confirmDelete()">
-                {{ csrf_token() }}
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                 <button type="submit" class="btn-delete-small" title="Delete this game">
                   🗑️
                 </button>
